--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "spunky-site",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./node/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/spunkyH0rn/spunky-site/issues"
   },
-  "homepage": "https://github.com/spunkyH0rn/spunky-site#readme"
+  "homepage": "https://github.com/spunkyH0rn/spunky-site#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "winston": "^3.11.0"
+  }
 }
